--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   padding: 0px;
   font-size: 14px !important;
   text-transform: uppercase;
+  margin-top:17px!important;
 }
 
 .fw-medium {
@@ -377,9 +378,9 @@ Image.iconP {
 
 .navbar .navbar-nav .nav-link {
   text-transform: uppercase;
-  margin-right: 30px;
+  margin-right: 0;
   font-size: 14px !important;
-  padding: 25px 0;
+  padding: 20px 15px!important;
   color: #3d55a5;
   font-weight: 600;
   outline: none;
@@ -573,24 +574,21 @@ select.form-control.selectOption {
 
 /* Program Section Css Start */
 .programsSection {
-  padding: 15px 0px;
+  padding: 0;
   overflow: hidden;
 }
-
+.m25{
+  margin:25px 0!important;
+}
+.programsSection3{
+  margin:25px 0!important;
+}
 .padding45 {
   padding: 45px 0px;
 }
 
 .padding25 {
   padding: 25px 0px;
-}
-
-.programsSection .container .row .col-lg-6.col-xl-6 {
-  padding: 0px 7px;
-}
-
-.programsSection3 .container .row .col-lg-6.col-xl-6 {
-  padding: 0px 7px;
 }
 
 button.btn.btn-primary.btnSidebar {
@@ -2023,6 +2021,7 @@ form.searchForm button {
   color: #FFA845;
   margin: 0;
   font-size: 50px;
+  font-weight: bold;
 }
 
 .programTitle1 h1 {
@@ -2067,6 +2066,7 @@ form.searchForm button {
   border: 3px solid #ECECEC;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  margin-bottom: 25px!important;
 }
 
 .onlinecousectinp {
@@ -2120,10 +2120,11 @@ form.searchForm button {
 }
 
 .programsSection1 {
-  padding: 20px 0px 0px 0px;
+  padding: 0px 0px 30px 0px;
 }
-
-
+.m25{
+  margin:25px!important;
+}
 .onlinecousectinstu {
   background-color: #ECECEC !important;
   border-radius: 30px;
@@ -2433,7 +2434,7 @@ article {
 }
 
 .col-md-12.section-h.py-4 {
-  padding-top: 60px !important;
+  padding-top: 10px !important;
 }
 
 footer.lFooter {
@@ -2488,6 +2489,7 @@ h6.accoTypeTitle {
   font-size: 15px;
   font-family: 'Lato';
   margin: 0;
+  font-weight: bold;
 }
 
 span.accouDes {
@@ -2510,10 +2512,10 @@ ul.accountTypeDetals {
 }
 
 .buttonsignUp {
-  border-radius: 20px;
-  padding: 5px 40px;
+  border-radius: 20px!important;
+  padding: 5px 40px!important;
   font-size: 15px;
-  background-color: #3D55A5;
+  background-color: #3D55A5!important;
   border: none;
   text-align: center;
   font-family: 'Lato';
@@ -2729,6 +2731,7 @@ padding: 10px;
 }
 td a {
   color: #1347A0;
+  text-decoration: none;
 }
 td.nameM {
   color: #323232;
@@ -2808,19 +2811,20 @@ button.newMessage {
   margin-bottom: 15px;
 }
 
-
-      #myInput {
-         background-image: url(Image/searchicon.png);
-         background-position: 10px 12px;
-         background-repeat: no-repeat;
-         width: 100%;
-         font-size: 16px;
-         border-radius: 15px;
-         padding: 7px 20px 7px 40px;
-         border: 1px solid #ddd;
-         margin-bottom: 40px;
-         margin-top: 20px;
-      }
+.datapri {
+  background: #fff !important;
+  /* background-position: 10px 12px; */
+  background-repeat: no-repeat !important;
+  width: 100% !important;
+  border-left: 4px solid #0f1878 !important;
+  font-size: 16px !important;
+  /* border-radius: 15px; */
+  padding: 1px px 1px 10px !important;
+  /* margin-bottom: 12px; */
+}
+.postSection{
+  background-color: #ECECEC;
+}
 
       #myUL {
          list-style-type: none;
@@ -2905,6 +2909,21 @@ ol, .ser, dl {
     padding: 0px 0px;
     margin: 0;
 }
+.programsSection h4{
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 600;
+}
+blockquote{
+  font-size: 18px;
+  font-style: italic;
+}
+.mtb25{
+  margin:15px 0!important;
+}
+.ss{
+  padding: 10px!important;
+}
 @media (max-width:767px){
    .messageSidePadding {
       padding-left: 0;
@@ -2937,7 +2956,201 @@ img.iconP {
   padding-bottom: 2rem;
 }
 
+.MessageTitle {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+button.newMessage {
+  width: 168px;
+  height: 36px;
+  color: #1347A0;
+  border: 2px solid #1347A0;
+  border-radius: 30px;
+  outline: none;
+  font-weight: 600;
 
+}
+.newMessageButton {
+  text-align: right;
+  margin-bottom: 15px;
+}
+
+.viewShowProfile1{
+  padding:10%;
+}
+      .viewPostSection {
+         height: 430px;
+         overflow-x: hidden;
+         overflow: scroll;
+         overflow-x: hidden;
+
+         width: 80%;
+         max-width: 600px;
+         margin: 0 auto;
+         padding: 3em;
+
+
+      }
+      .messageGrop hr {
+    display: none;
+}
+.messageGrop {
+    padding: 30px 40px;
+    border-radius: 30px;
+}
+table#table-id tr td {
+    padding: 25px 10px;
+}
+
+      /* width */
+      .viewPostSection::-webkit-scrollbar p {
+         width: 10px;
+      }
+
+      /* Track */
+      .viewPostSection::-webkit-scrollbar-track {
+         background: #f1f1f1;
+      }
+
+      /* Handle */
+      .viewPostSection::-webkit-scrollbar-thumb {
+         background: #888;
+      }
+
+      /* Handle on hover */
+      .viewPostSection::-webkit-scrollbar-thumb:hover {
+         background: #555;
+      }
+
+      .viewShowProfile::-webkit-scrollbar {
+         width: 2px;
+      }
+
+      /* Track */
+      .viewShowProfile::-webkit-scrollbar-track {
+         background: #fff;
+      }
+
+      /* Handle */
+      .viewShowProfile::-webkit-scrollbar-thumb {
+         background: #888;
+      }
+
+      /* Handle on hover */
+      .viewShowProfile::-webkit-scrollbar-thumb:hover {
+         background: #555;
+      }
+
+      #myInput {
+         background-image: url(./Image/searchicon.png);
+         background-position: 10px 12px;
+         background-repeat: no-repeat;
+         width: 100%;
+         font-size: 16px;
+         border-radius: 15px;
+         padding: 7px 20px 7px 40px;
+         border: 1px solid #ddd;
+         margin-bottom: 40px;
+         margin-top: 20px;
+      }
+
+      #myUL {
+         list-style-type: none;
+         padding: 0;
+         margin: 0;
+      }
+
+      #myUL li a {
+         border: 1px solid #ddd;
+         margin-top: -1px;
+         /* Prevent double borders */
+         background-color: #f6f6f6;
+         padding: 12px;
+         text-decoration: none;
+         font-size: 18px;
+         color: black;
+         display: block
+      }
+
+      #myUL li a:hover:not(.header) {
+         background-color: #eee;
+      }
+
+      .datapri {
+         background: #fff !important;
+         /* background-position: 10px 12px; */
+         background-repeat: no-repeat !important;
+         width: 100% !important;
+         border-left: 4px solid #0f1878 !important;
+         font-size: 16px !important;
+         /* border-radius: 15px; */
+
+         padding: 1px px 1px 10px !important;
+
+         /* margin-bottom: 12px; */
+      }
+
+      .datapri p {
+         padding-top: 10px;
+         margin: 0;
+         padding-bottom: 10px;
+         padding-left: 5px;
+      }
+
+      .ser li {
+         padding: 2% 4%;
+         list-style: none;
+      }
+
+      .ser a {
+         color: #000;
+         text-decoration: none;
+      }
+
+      .h6font {
+         font-size: 16px !important;
+      }
+
+      thead,
+      tbody,
+      tfoot,
+      tr,
+      td,
+      th {
+         border-color: inherit;
+         border-style: none !important;
+         border-width: 0;
+      }
+      .messageSidePadding {
+    padding-left: 60px;
+}
+ol, .ser, dl {
+    margin-top: 0;
+    margin-left: -10%;
+    margin-bottom: 1rem;
+    left: 0px !important;
+}
+.HeadingTitleSetting {
+    color: #000;
+    font-weight: 700;
+    font-size: 20px;
+    padding: 0px 0px;
+    margin: 0;
+}
+@media (max-width:767px){
+   .messageSidePadding {
+      padding-left: 0;
+   }
+   .messageGrop {
+      padding: 30px 20px;
+   }
+   table#table-id tr td {
+      padding: 8px 10px;
+   }
+   .HeadingTitleSetting {
+      padding: 15px 10px;
+   }
+}
 
 @media screen and (min-width: 576px) {
   .swiper-container {
@@ -2968,17 +3181,19 @@ img.iconP {
 }
 button.btn.btn-primary.btnBSidebar.RefilterBtn {
   color: #fff !important;
+  background-color: #3D55A5!important;
 }
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
   background: #3D55A5;
   color: #fff;
-  border-radius: 19px;
-
+  border-radius: 6px;
   display: grid;
-
   align-items: center;
-
   /* grid-template-columns: 7% 91%; */
   color: var(--bs-nav-pills-link-active-color);
   background-color: var(--bs-nav-pills-link-active-bg);
+}
+@media(max-width:767px){
+  .futurecolor h1{text-align: center;}
+  .programTitle1{margin:0 auto!important;width:80%!important;}
 }
