--- a/src/App.css
+++ b/src/App.css
@@ -1609,7 +1609,7 @@ small.postAuthorUsername {
 h4.gName {
   font-size: 14px;
   color: #3C3C3C;
-  font-weight: 200;
+  font-weight: 600;
   margin: 0;
 }
 
@@ -1789,14 +1789,14 @@ h1.coursePrice {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #fff;
-  background-color: #3D55A5;
-  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+  color: #fff !important;
+  background-color: #3D55A5 !important;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%) !important;
 }
 
 .accordion-button {
-  color: #fff;
-  background-color: #3D55A5;
+  color: #fff !important;
+  background-color: #3D55A5 !important;
 }
 
 button.accordion-button {
@@ -1804,49 +1804,49 @@ button.accordion-button {
 }
 
 .accordion-item {
-  border: none;
-  background-color: #ECECEC;
-  margin-bottom: 10px;
-  border-radius: 19px;
+  border: none !important;
+  background-color: #ECECEC !important;
+  margin-bottom: 10px !important;
+  border-radius: 19px !important;
 }
 
 .accordion-button::after,
 .accordion-button:not(.collapsed)::after {
-  background-image: none;
+  background-image: none !important;
 }
 
 .plusCercle.pCerclePadding {
-  margin-right: 25px;
+  margin-right: 25px !important;
 }
 
 ul.accourdionCourseBullot {
-  padding-left: 50px;
+  padding-left: 50px !important;
 }
 
 .coreModuleRight {
-  background: #ECECEC;
-  border-radius: 30px;
-  padding: 30px;
+  background: #ECECEC !important;
+  border-radius: 30px !important;
+  padding: 30px !important;
 }
 
 .coreModuleRight h1 {
-  font-size: 20px;
+  font-size: 20px !important;
 }
 
 .coreModuleRight p {
-  font-size: 13px;
+  font-size: 13px !important;
 }
 
 .coreModuleRight p a {
-  color: #2A38FF;
+  color: #2A38FF !important;
 }
 
 h1.coreModuleH {
-  color: #3D55A5;
-  font-family: 'Lato';
-  font-size: 30px;
-  font-weight: 800;
-  margin-bottom: 20px;
+  color: #3D55A5 !important;
+  font-family: 'Lato' !important;
+  font-size: 30px !important;
+  font-weight: 800 !important;
+  margin-bottom: 20px !important;
 }
 
 .space {
@@ -3185,18 +3185,36 @@ ol, .ser, dl {
 button.btn.btn-primary.btnBSidebar.RefilterBtn {
   color: #fff !important;
   background-color: #3D55A5!important;
+  background: #3D55A5;
+    color: #fff;
+    border-radius: 19px!important;
+    padding: 6px 15px;
+    display: grid;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 15px;
+    grid-template-columns: 7% 91%;
 }
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
   background: #3D55A5;
   color: #fff;
-  border-radius: 6px;
+  border-radius: 19px!important;
   display: grid;
   align-items: center;
   /* grid-template-columns: 7% 91%; */
   color: var(--bs-nav-pills-link-active-color);
   background-color: var(--bs-nav-pills-link-active-bg);
 }
+.nav-item {
+  border-radius: 19px !important;
+}
+.nav-pills .nav-link{
+  border-radius: 19px !important;
+}
 @media(max-width:767px){
   .futurecolor h1{text-align: center;}
   .programTitle1{margin:0 auto!important;width:80%!important;}
+}
+.nav-item a:hover {
+  color: #fff !important;
 }
