--- a/src/index.css
+++ b/src/index.css
@@ -180,10 +180,12 @@ h2 {
 }
 
 .tabs .tab-content {
-  background-color: #ECECEC;
-  padding: 50px;
-  border-radius: 10px;
   min-height: 300px;
+    background: #ECECEC;
+    width: 100%;
+    height: 100%;
+    border-radius: 19px;
+    padding: 84px 49px 0px 58px;
 }
 
 .nav-pills .nav-link.active,
