--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,7 @@ code {
 .svgLogo {
   width: 126px;
   height: 26px;
+  margin-top:-5px;
 }
 
 header {
@@ -2513,9 +2514,10 @@ ul.tandcLink2 a {
   line-height: 120%;
   position: relative;
   background-color: #3D55A5 !important;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   color:#fff;
 }
+
 /*.nav-item a:before {
   content: '+';
   position: absolute;
@@ -2675,6 +2677,48 @@ ul.tandcLink2 a {
   object-fit: cover;
   object-position: left;
 }
+.main-block {
+  padding: 16px;
+  max-width: 900px;
+  margin: 0 auto;
+  font-size: 18px;
+}
+.fixedTop {
+  width: 100%;
+  position: fixed!important;
+  top: 0;
+  z-index: 9999;
+  box-shadow: 0 0 1px 1px #a9a3a3;
+}
+.fixedTop + .main-block {
+  padding-top: 102px;
+}
+.navbar{
+  padding:0 15px;
+}
+.nav-pills .nav-link {
+  padding: 12px 0 12px 35px!important;
+  font-size: 14px!important;
+  position: relative;
+}
+.nav-pills .nav-link:before {
+  content: "+";
+  position: absolute;
+  left: 5px;
+  color: #fff;
+  font-size: 25px;
+  font-weight: bold;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  height: 22px;
+  width: 22px;
+  text-align: center;
+  top:10px;
+}
+.nav-pills .nav-link.active:before{
+  content: "-";
+}
+
 @media(max-width:991px){
   .navigation-menu{display:none;}
   .navigation-menu.expanded{display:block;}
