--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 .slider {
   background: url(./img/slider1.png) no-repeat 0 0;
   background-size: 100%;
-  min-height: 500px;
+  min-height: 360px;
   position: relative;
 }
 
@@ -30,7 +30,7 @@ code {
   text-align: center;
   width: 700px;
   position: absolute;
-  top: 250px;
+  top: 150px;
   left: 50%;
   margin-left: -350px;
 }
@@ -49,7 +49,7 @@ code {
 
 .slider .searchPanel .btnSearch {
   position: absolute;
-  top: 60px;
+  top: 50px;
   right: 5px;
   font-size: 15px !important;
   font-weight: 500;
@@ -226,6 +226,11 @@ h2 {
     text-transform: uppercase!important;
     padding: 0!important;
     margin: 10px 0px 0!important;
+    line-height: 24px!important;
+}
+h1{
+  font-size:2.0em!important;
+  font-weight: bold!important;
 }
 
 .fw-medium {
@@ -433,6 +438,10 @@ img.iconP {
 }
 .pad {
   padding: 6% !important;
+}
+
+.modal-body .form-control{
+  margin-bottom: 10px;
 }
 
 @media (max-width: 991.98px) {
@@ -648,7 +657,9 @@ img.iconP {
   vertical-align: middle;
   margin-left: 8px;
 }
-
+.mainHeader{
+  padding:0 15px!important;
+}
 @media (max-width: 991.98px) {
   .navbar .navbar-nav .nav-link {
     margin-right: 0;
@@ -1380,8 +1391,7 @@ button .inner-pulse {
 /* Footer Css Start */
 footer.footerSection {
   padding: 80px 0px 20px 0px;
-  background: #ECECEC;
-  margin-top:60px;
+  background-image: linear-gradient(0deg, #ffffff, #d0d0d0, #d0d0d0);
 }
 
 .footerTitle {
@@ -1841,7 +1851,18 @@ p.groupFollowers {
 .gPlus {
   color: #3D55A5;
 }
-
+.btnConselling {
+  position: fixed;
+  top: 60%;
+  background-color: #FFA845!important;
+  border-radius: 0 0 5px 5px!important;
+  rotate: 90deg;
+  border: 0!important;
+  right: -64px;
+}
+.btnConselling:hover{
+  background-color: #f6982c!important;
+}
 @media only screen and (max-width:767px) {
   .trendingButton button {
     margin-bottom: 5px;
