--- a/src/App.css
+++ b/src/App.css
@@ -785,7 +785,9 @@ input[type=checkbox] {
 /* Tab Systmes Css Start */
 .leftSideBtn p {
   margin: 0;
-  font-size: 17px;
+  font-size: 15px;
+  padding: 2px 5px 0px;
+  font-weight: 500;
 }
 
 .plusCercle {
@@ -988,15 +990,16 @@ div#slider-range {
 }
 
 /* Tab Systmes Css Start */
+.leftSidebar{
+  margin-left:-15px!important;
+}
 .leftSideBtn {
   background: #3D55A5;
   color: #fff;
   border-radius: 19px;
-  padding: 6px 15px;
-  display: grid;
-  gap: 10px;
+  padding: 0px 15px;
+  display: block;
   align-items: center;
-  grid-template-columns: 7% 81%;
 }
 
 .tabSystems {
@@ -1007,8 +1010,8 @@ div#slider-range {
   background: #ECECEC;
   width: 100%;
   height: 100%;
-  border-radius: 19px;
-  padding: 84px 49px 0px 58px;
+  border-radius: 10px;
+  padding: 15px;
 }
 
 .tabPanel p {
