--- a/src/index.css
+++ b/src/index.css
@@ -182,7 +182,7 @@ h2 {
 
 .tabs .tab-content {
   background-color: #ECECEC;
-  padding: 50px;
+  padding: 0;
   border-radius: 10px;
   min-height: 300px;
 }
@@ -2718,8 +2718,7 @@ ul.tandcLink2 a {
   padding:0 15px;
 }
 .nav-pills .nav-link {
-  padding: 12px 0 12px 35px!important;
-  font-size: 14px!important;
+  padding: 10px 0 1px 19px!important;
   position: relative;
 }
 .nav-pills .nav-link:before {
@@ -2727,14 +2726,14 @@ ul.tandcLink2 a {
   position: absolute;
   left: 5px;
   color: #fff;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: bold;
   border: 2px solid #fff;
   border-radius: 50px;
   height: 22px;
   width: 22px;
   text-align: center;
-  top:10px;
+  top: 10px;
 }
 .nav-pills .nav-link.active:before{
   content: "-";
