--- a/src/index.css
+++ b/src/index.css
@@ -2901,3 +2901,20 @@ li.location {
 .searchProgram{
   margin-bottom:0!important;
 }
+ul.rankingList{
+  list-style:none;
+}
+ul.rankingList li{
+  display:block;
+  width:100%;
+  color:#fff;
+}
+.pb10{
+  padding-bottom:0!important;
+}
+.mt0{
+  margin-top:0!important;
+}
+.overViewContent h2{
+  font-weight:bold!important;
+}
