--- a/src/App.css
+++ b/src/App.css
@@ -1232,11 +1232,21 @@ button .inner-pulse {
 /* Footer Css Start */
 footer.footerSection {
   padding: 80px 0px 20px 0px;
-
+margin-top: 60px ;
   background-image: linear-gradient(0deg, #ECECEC, #ECECEC, #ECECEC03);
 
 }
-
+.banneerSection {
+  
+margin-top: 60px ;
+ 
+}
+.programsSection h4 {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 600;
+  color: #ffffff;
+}
 .footerTitle {
   margin-bottom: 27px;
 }
@@ -3315,4 +3325,42 @@ button.btn.btn-primary.btnBSidebar.RefilterBtn {
 }
 .star-ratings .star-container{
   padding-left:0!important;
+}
+
+
+
+.borederlio2 img {
+  width: 70px;
+  position: relative;
+  justify-content: space-around !important;
+  top: 25px;
+  left: 20px;
+  border-radius: 10px;
+}
+.borederlio1 img {
+  width: 80px;
+  position: absolute;
+  right: 20px;
+  bottom: 31px;
+}
+.groupSection1 {
+  display: grid;
+  gap: 7px;
+  border-radius: 30px;
+  background-color: #fff;
+  padding: 10px 10px 10px 10px;
+  grid-template-columns: 12% 72% 12%;
+  margin: 8px 0px;
+}
+h4.gName {
+  font-size: 14px;
+  color: #3C3C3C;
+  font-weight: 500;
+  margin: 0;
+}
+p.groupFollowers {
+  color: #3D55A5;
+  margin: 0;
+  font-size: 14px;
+  margin-top: -3px;
 }
