--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,8 @@ h1 {
 
 .slider .searchPanel .btnSearch {
   position: absolute;
-  top: 50px;
-  right: 5px;
+  right: 50px;
+    top: 60px;
   font-size: 15px !important;
   font-weight: 500;
   padding: 10px 15px;
@@ -178,7 +178,7 @@ h2 {
 }
 
 .rightSection .searchBox ul li img {
-  max-width: 200px;
+  max-width: 100px;
   margin: 0 auto;
 }
 
@@ -1350,7 +1350,13 @@ button .inner-pulse {
   text-align: left;
   margin-top: 50px !important;
 }
-
+.location {
+  float: right;
+}
+a {
+  color: var(--bs-link-color);
+  text-decoration: auto;
+}
 .rightSection .searchBox ul li img {
   max-width: 100px;
     background-color: #f6f6f6;
@@ -1358,8 +1364,8 @@ button .inner-pulse {
     border-radius: 0;
     margin: 0 auto;
     min-height: 100%;
-    width: 1500px;
-    height: 100px;
+    width: 300px;
+    height: 80px;
     border: 1px solid #ccc;
 }
 .img-fluid {
@@ -1525,7 +1531,7 @@ ul.tandcLink {
 
 ul.tandcLink a {
   color: #000;
-  text-decoration: underline;
+  text-decoration: none;
   padding: 0px 20px;
 }
 
@@ -1914,7 +1920,13 @@ p.groupFollowers {
   button.postButton {
     padding: 9px 14px;
   }
-
+  h5.cssh {
+    color: #404b71 !important;
+    font-size: 18px!important;
+    font-weight: 800!important;
+    margin: 5px!important;
+    text-align: center!important;
+}
   .newPostContainer input[type="text"]::placeholder {
     font-size: 10px;
   }
@@ -2844,9 +2856,8 @@ ul.tandcLink2 a {
 li.location {
   margin-top: 40px !important;
 }
-li.schoolDetails{
-  min-width:500px;
-}
+
+  
 li.location {
   margin-top: 30px !important;
   text-align: right;
