--- a/src/App.css
+++ b/src/App.css
@@ -1018,14 +1018,12 @@ div#slider-range {
 }
 
 /* Tab Systmes Css Start */
-.leftSidebar{
-  margin-left:-15px!important;
-}
+
 .leftSideBtn {
   background: #3D55A5;
   color: #fff;
   border-radius: 19px;
-  padding: 0px 15px;
+  padding: 0px 25px;
   display: block;
   align-items: center;
 }
@@ -2605,7 +2603,30 @@ ul.accountTypeDetals {
   color: #687173;
   margin: 0;
 }
+.groupSectionll {
 
+  gap: 7px;
+  border-radius: 30px;
+  background-color: #fff;
+  padding: 10px 10px 10px 10px;
+  grid-template-columns: 12% 72% 12%;
+  margin: 15px;
+}
+h4.gNamell {
+  font-size: 14px;
+  color: #4700ec;
+  font-weight: 500;
+  margin: 0px 2px 0px 8px;
+}
+.rightSection .searchBox ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+p.par {
+  margin-top: 40px !important;
+}
 .groupSection1 {
   display: grid;
   gap: 7px;
@@ -3373,4 +3394,9 @@ p.groupFollowers {
   margin: 0;
   font-size: 14px;
   margin-top: -3px;
+}
+.postGroups3 {
+  padding: 15px 0px;
+  background: #ECECEC;
+  border-radius: 30px;
 }
